# Movie-Recommender-System

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
recommender/: settings.py
